crates/solidity/testing/snapshots/bindings_output/contracts/constructors/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:4:16]
   │
 4 │ ╭─▶     constructor(string memory _name) {
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     string public name;
   │                   ──┬─  
   │                     ╰─── def: 2
   │ 
 4 │     constructor(string memory _name) {
   │     ─────┬─────  
   │          ╰─────── unresolved
───╯
